--- a/WebContent/usermanager.xhtml
+++ b/WebContent/usermanager.xhtml
@@ -96,7 +96,7 @@
 					</p:commandLink>
 				</li>
 				<li>
-					<p:commandLink class="menulist" action="#{userBean.showUserManager()}">
+					<p:commandLink class="menulist" action="#{userBean.showUserManager()}" disabled="#{userBean.loggeduser.getRole().getRole() != 'admin'}">
 						<h:outputText value="User Manager" /> 
 					</p:commandLink>
 				</li>
@@ -174,6 +174,7 @@
     							<h:outputText value="Add department"/>
     						</p:commandLink>
     						<p:spacer width="20" height="32"/> <p:spacer width="20" height="32"/> <p:spacer width="20" height="32"/><p:spacer width="20" height="32"/><p:spacer width="20" height="32"/>
+    						
     					</h:panelGrid><br/>
     					<p:spacer width="90" height="30"/>
     					<p:commandButton value="Create User" actionListener="#{userBean.addUser()}" update="form1"/>
