Redesigned updateUser page and implemented implicit navigation to the updateUser page

--- a/WebContent/user/createuser.xhtml
+++ b/WebContent/user/createuser.xhtml
@@ -16,7 +16,7 @@
 		<ui:define name="content">
 			<h:outputStylesheet library="css" name="stylemenu.css"/>
 			<span style="font-weight: bold; font-size: 20px">User Manager</span><p:separator/>
-			<div class="createUser" style=" ">
+			<div class="userManager" style=" ">
 				<h4 style="margin-left: 1%">Create User</h4>
 				<h:form id="form1">
     					<p:messages id="messages" closable="true"/>
