Implementing KRI module. Completed adding single KRI page and functionality. Started implementing Batch upload of KRI.

--- a/WebContent/old/kriManager.xhtml
+++ b/WebContent/old/kriManager.xhtml
@@ -22,7 +22,7 @@
 	<ui:composition template="/template/layout.xhtml">
 		<ui:define name="content">
 			<span style="font-weight: bold; font-size: 20px">KRI Manager</span><p:separator/>
-				<div id="addKRI" style="width: 80%">
+				<div class="kri_manager">
 				<h5>Add KRI for a department</h5>
 					<h:form id="add" style="margin-left:10%">
 						<p:messages id="messages" closable="true"/>			
