--- a/WebContent/kri/addsinglekri.xhtml
+++ b/WebContent/kri/addsinglekri.xhtml
@@ -16,8 +16,10 @@
 		<ui:define name="content">
 		<h:outputStylesheet library="css" name="stylemenu.css"/>
 			<span style="font-weight: bold; font-size: 20px">KRI Manager</span><p:separator/>
-				<div class="kri_manager">
-					<h4 style="margin-left: 1%">Add KRI for a department</h4>
+				<div class="kri_manager panel panel-primary">
+					<div class="panel-heading">Add KRI for a department</div>
+					<div class="panel-body">
+					
 					<p:spacer width="20" height="33"/><p:spacer width="20" height="33"/>
 					<h:form id="add" style="margin-left:10%">
 						<p:messages id="messages" closable="true"/>			
@@ -93,6 +95,7 @@
     					</p:blockUI>
 								<p:spacer width="200" height="40"/>			
 					</h:form>
+					</div>
 				</div>
 			</ui:define>
 		</ui:composition>			
