DeleteKRI page completed

--- a/WebContent/kri/updatekri.xhtml
+++ b/WebContent/kri/updatekri.xhtml
@@ -15,7 +15,7 @@
 	<ui:composition template="/template/layout.xhtml">
 		<ui:define name="content">
 		<h:outputStylesheet library="css" name="stylemenu.css"/>
-			<span style="font-weight: bold; font-size: 20px">KRI Manager</span><p:separator/>
+			<span style="font-weight: bold; font-size: 20px">KRI Manager - Update KRI</span><p:separator/>
 			<div class="kri_manager" style="margin-left: 3%; font-size: 11px">
 
 					<p:spacer width="20" height="15"/><p:spacer width="20" height="15"/>
